--- a/qta/templates/more_info.html
+++ b/qta/templates/more_info.html
@@ -195,7 +195,7 @@
         <nav class="navbar">
             <a class="nav-link" href={% url 'mainscreen' %}>Application</a>
             <a class="nav-link" href={% url 'about' %}>About</a>
-            <a class="nav-link" href="#">Service</a>
+            <a class="nav-link" href={% url 'stadistics' %}>Stadistics</a>
             <a class="nav-link" href="#">More</a>
             {% if request.user.is_authenticated %}
             <a class="nav-link" href={% url "exit" %}>Sign out</a>
@@ -247,6 +247,10 @@
                     <input type="text" id="priority" name="priority" value="{{ ticket.priority }}" readonly>
                 </div>
 
+                <div class="input-box">
+                    <span class="details">Support name</span>
+                    <input type="text" id="Support_name" name="Support_name" value="{{ ticket.Support_name }}" >
+                </div>
 
                 <div class="input-box">
                     <span class="details">Fisrt Follow-up: </span>
