--- a/qta/templates/ticket.html
+++ b/qta/templates/ticket.html
@@ -195,7 +195,7 @@
         <nav class="navbar">
             <a class="nav-link" href={% url 'mainscreen' %}>Application</a>
             <a class="nav-link" href={% url 'about' %}>About</a>
-            <a class="nav-link" href="#">Service</a>
+            <a class="nav-link" href={% url 'stadistics' %}>Stadistics</a>
             <a class="nav-link" href="#">More</a>
             {% if request.user.is_authenticated %}
             <a class="nav-link" href={% url "exit" %}>Sign out</a>
