--- a/qta/templates/stadistics.html
+++ b/qta/templates/stadistics.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -316,7 +317,7 @@
 
     <section class="home" id="home">
         <div class="image">
-            <img src='https://i.postimg.cc/B6TSYPT8/graph.jpg' alt="">
+            <img src="{% static '/graph.jpg' %}">
         </div>
         
         <div class="content">
@@ -332,7 +333,7 @@
 
     <section class="home">
         <div class="image">
-            <img src='https://i.postimg.cc/C1LpxDjz/graph2.jpg' alt="">
+            <img src="{% static '/graph2.jpg' %}">
         </div>
         
         <div class="content">
@@ -348,7 +349,7 @@
 
     <section class="home">
         <div class="image">
-            <img src='https://i.postimg.cc/Pf13pd11/graph3.jpg' alt="">
+            <img src="{% static '/graph3.jpg' %}">
         </div>
         
         <div class="content">
