--- a/qta/templates/more_info.html
+++ b/qta/templates/more_info.html
@@ -270,7 +270,7 @@
                 <div class="input-box">
                     <span class="details">State</span>
                     <select class="form-select form-select-sm" aria-label="Small select example" type="text" id="campo5" name="state" required>
-                        <option selected>{{ticket.state}}</option>
+                        <option selected>In progress</option>
                         <option value="New">New</option>
                         <option value="In progress">In progress</option>
                         <option value="Completed">Completed</option>
