--- a/qta/templates/stadistics.html
+++ b/qta/templates/stadistics.html
@@ -380,6 +380,13 @@
 
     </section>
 
+    <section>        
+        <div class="content">
+            <h3>Download CSV</h3>
+            <a href="{% static '/statistics.csv' %}" download="stadistics.csv" class="btn">Descargar CSV <span class="fas fa-chevron-right"></span></a>>
+        </div>
+    </section>
+
     {% comment %} <section class="home">
         <div class="image">
             <img src="{% static '/graph6.jpg' %}">
