--- a/qta/templates/mainscreen.html
+++ b/qta/templates/mainscreen.html
@@ -357,8 +357,7 @@
             <h5 class="Number_ticket">{{ ticket.ticket_number }}</h5>
             <b>Contact Name: </b><p class="name">{{ ticket.contact_name }}</p>
             <b>Call Time: </b><p class="call_time">{{ ticket.call_time }}</p>
-            <b>Time Elapse: </b><p class="time_elapse">{{ ticket.time_elapse }}</p>
-            <b>Priority: </b><p>{{ ticket.priority }}</p>
+            <b>Priority: </b><p style="color:red">{{ ticket.priority }}</p>
             <b>Discussion: </b><p class="discussion">{{ ticket.discussion}}</p>
             <b>Place: </b><p class="place">{{ ticket.place}}</p>
             <a href={% url "more_info" ticket.ticket_number %} class="btn btn-primary">More Information</a>
@@ -372,8 +371,7 @@
             <h5 class="Number_ticket">{{ ticket.ticket_number }}</h5>
             <b>Contact Name: </b><p class="name">{{ ticket.contact_name }}</p>
             <b>Call Time: </b><p class="call_time">{{ ticket.call_time }}</p>
-            <b>Time Elapse: </b><p class="time_elapse">{{ ticket.time_elapse }}</p>
-            <b>Priority: </b><p>{{ ticket.priority }}</p>
+            <b>Priority: </b><p style="color:orange">{{ ticket.priority }}</p>
             <b>Discussion: </b><p class="discussion">{{ ticket.discussion}}</p>
             <b>Place: </b><p class="place">{{ ticket.place}}</p>
             <a href={% url "more_info" ticket.ticket_number %} class="btn btn-primary">More Information</a>
@@ -387,8 +385,7 @@
             <h5 class="Number_ticket">{{ ticket.ticket_number }}</h5>
             <b>Contact Name: </b><p class="name">{{ ticket.contact_name }}</p>
             <b>Call Time: </b><p class="call_time">{{ ticket.call_time }}</p>
-            <b>Time Elapse: </b><p class="time_elapse">{{ ticket.time_elapse }}</p>
-            <b>Priority: </b><p>{{ ticket.priority }}</p>
+            <b>Priority: </b><p style="color:yellow">{{ ticket.priority }}</p>
             <b>Discussion: </b><p class="discussion">{{ ticket.discussion}}</p>
             <b>Place: </b><p class="place">{{ ticket.place}}</p>
             <a href={% url "more_info" ticket.ticket_number %} class="btn btn-primary">More Information</a>
@@ -402,8 +399,7 @@
             <h5 class="Number_ticket">{{ ticket.ticket_number }}</h5>
             <b>Contact Name: </b><p class="name">{{ ticket.contact_name }}</p>
             <b>Call Time: </b><p class="call_time">{{ ticket.call_time }}</p>
-            <b>Time Elapse: </b><p class="time_elapse">{{ ticket.time_elapse }}</p>
-            <b>Priority: </b><p>{{ ticket.priority }}</p>
+            <b>Priority: </b><p style="color:green">{{ ticket.priority }}</p>
             <b>Discussion: </b><p class="discussion">{{ ticket.discussion}}</p>
             <b>Place: </b><p class="place">{{ ticket.place}}</p>
             <a href={% url "more_info" ticket.ticket_number %} class="btn btn-primary">More Information</a>
