--- a/qta/templates/more_info.html
+++ b/qta/templates/more_info.html
@@ -279,7 +279,7 @@
             
             <div class="pt-1 mb-4">
                 <button type='submit' class="btn btn-dark btn-lg btn-block">Update Ticket</button>
-                <input type="button" class="btn btn-dark btn-lg btn-block" onclick="history.back()" name="volver atrás" value="volver atrás">
+                <input type="button" class="btn btn-dark btn-lg btn-block" onclick="history.back()" name="Go back" value="Go back">
              </div>
         </form>
       </div>
@@ -338,7 +338,7 @@
                         <label for="third_follow_up"><b>Third Follow-up: </b></label>
                         <input type="text" id="third_follow_up" name="third_follow_up" value="{{ ticket.third_follow_up }}"><br>
 
-                        <button  type="submit" style="background-color: #023373; color: #ffffff">Guardar Cambios</button>
+                        <button  type="submit" style="background-color: #023373; color: #ffffff">Save changes</button>
 
                     </form>
                   </div>
