--- a/qta/templates/ticket.html
+++ b/qta/templates/ticket.html
@@ -263,7 +263,7 @@
             
             <div class="pt-1 mb-4">
                 <button type='submit' class="btn btn-dark btn-lg btn-block">Create Ticket</button>
-                <input type="button" class="btn btn-dark btn-lg btn-block" onclick="history.back()" name="volver atrás" value="volver atrás">
+                <input type="button" class="btn btn-dark btn-lg btn-block" onclick="history.back()" name="Go back" value="Go back">
              </div>
         </form>
       </div>
